<resources>
        <string name="app_name">Driveway-Pro</string>
        <string name="mapbox_access_token">pk.eyJ1IjoieWFtbGFrIiwiYSI6ImNrZ2tucXBzNTA5MjcyeXBjY3c1Ym0xNnIifQ.b0PnhjN0K7jevMTXL8NX_g</string>
        <string name="login_txtview">Login</string>
        <string name="email_login">Email</string>
        <string name="password_login">Password</string>
        <string name="forget_password_link">Forget password</string>
        <string name="login_btn">Login</string>
        <string name="create_account_link">Create account </string>
        <string name="or_signin_with_txtview"> or signin with</string>
        <string name="create_account_txtview">Create Account</string>
        <string name="name_create_acct">User Name</string>
        <string name="phone_number_create_acct">Phone Number</string>
        <string name="email_create_acct">Email</string>
        <string name="password_create_acct">Password</string>
        <string name="confirm_password_create_acct">Confirm Password</string>
        <string name="create_account_btn">Create Account</string>
        <string name="already_have_an_account_link">Already have an account</string>
        <string name="forgot_password_txtview">Forgot Password</string>
        <string name="email_forgot_pw">Email</string>
        <string name="send_link_btn">Send Link</string>
        <string name="facebook_app_id">380874523283389</string>
        <string name="fb_login_protocol_scheme">fb380874523283389</string>
        <string name="title_activity_home">HomeActivity</string>
        <string name="navigation_drawer_open">Open navigation drawer</string>
        <string name="navigation_drawer_close">Close navigation drawer</string>
        <string name="nav_header_title">Android Studio</string>
        <string name="nav_header_subtitle">android.studio@android.com</string>
        <string name="nav_header_desc">Navigation header</string>
        <string name="action_settings">Settings</string>

        <string name="menu_home">Home</string>
        <string name="menu_gallery">Gallery</string>
        <string name="menu_slideshow">Slideshow</string>
        <string name="menu_history">History</string>
        <string name="hello_blank_fragment">Hello blank fragment</string>
        <string name="menu_map">Map</string>
        <string name="stop">Stop Timer</string>
        <string name="start">Start Timer</string>
        <string name="working">Started</string>
        <string name="stopped">Stopped</string>

        <string name="logo_txt">Driveway Pro</string>
        <string name="login_text">Login</string>
        <string name="password_text">password</string>
        <string name="forgot_password_text">Forgot password?</string>
        <string name="no_account_text">Don\'t have an account? Register.</string>
        <string name="sign_up_text">Sign Up</string>
        <string name="name_text">Full Name</string>
        <string name="phone_text">phone number</string>
        <string name="plate_text">Plate Number</string>
        <string name="confirm_password_text">confirm password</string>
        <string name="create_account_text">Create Account</string>
        <string name="have_account_text">Already have an account? Login.</string>
    <string name="Park">Park</string>
        <string name="Exit">Exit</string>
        <string name="Tickets">Tickets</string>
        <string name="Clear">Clear Stack</string>
        <string name="ParkingOfficer">Parking Officer</string>
        <string name="Continue">Continue</string>
        <string name="SelectSlot">Select Slot</string>
        <string name="SelectFloor">Select Floor/Stack</string>
    <string name="ParkingSpots">Parking Spots</string>

</resources>

