<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="0dp"
    tools:context=".PoHomeActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="248dp"

        android:background="@drawable/po"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom">


        <TextView
            android:id="@+id/poName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/ParkingOfficer"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/plateNoInput"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/plateNoInput"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/plateNoInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:hint="@string/plate_text"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/poName" />


        <Button
            android:id="@+id/parkBtn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:background="@color/colorPrimary"
            android:text="@string/Park"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/plateNoInput" />

        <Button
            android:id="@+id/exitBtn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:background="@color/colorPrimary"
            android:text="@string/Exit"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.045"
            app:layout_constraintStart_toEndOf="@+id/parkBtn"
            app:layout_constraintTop_toBottomOf="@+id/plateNoInput" />

        <Button
            android:id="@+id/ticketBtn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:background="@color/colorPrimary"
            android:text="@string/Tickets"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/parkBtn" />

        <Button
            android:id="@+id/clearBtn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:background="@color/colorPrimary"
            android:text="@string/Clear"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.045"
            app:layout_constraintStart_toEndOf="@+id/ticketBtn"
            app:layout_constraintTop_toBottomOf="@+id/exitBtn" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>